<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:layout_width="304dp"
        android:layout_height="44dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="@string/text_email"
        android:id="@+id/signup_username"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_createAccount"/>
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="226dp"
        android:layout_height="183dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_main"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/text_email"
        android:autofillHints="@string/text_email"
        android:id="@+id/signup_email_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:autofillHints="@string/text_pass"
        android:id="@+id/signup_passw_text"
        android:hint="@string/text_pass"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_text"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_passw_text" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
        android:text="@string/already_registered"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:id="@+id/loginTxtView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
        android:text="@string/firebase_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_createAccount" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        tools:text="@string/firebase_info"/>

</android.support.constraint.ConstraintLayout>